--- a/FirstSnake/Main.html
+++ b/FirstSnake/Main.html
@@ -8,6 +8,7 @@
     <title>Fudge Snake</title>
     <script src="../Fudge/FudgeCore.js"></script>
     <script src="Snake.js"></script>
+    <script src="Main.js"></script>
 </head>
 
 <body>
