--- a/3DSnake/Main.html
+++ b/3DSnake/Main.html
@@ -7,9 +7,11 @@
     <meta name="snakeViewport" content="width=device-width, initial-scale=1.0">
     <title>Fudge Snake 3D</title>
     <script src="../Fudge/FudgeCore.js"></script>
+    <script src="Block.js"></script>
     <script src="Snake.js"></script>
     <script src="GroundBlock.js"></script>
     <script src="CollisionEvents.js"></script>
+    <script src="FruitBlock.js"></script>
     <script src="Main.js"></script>
 </head>
 
