--- a/3DSnake/Main.html
+++ b/3DSnake/Main.html
@@ -19,7 +19,24 @@
 
 <body>
     <h1>Fudge Snake 3D</h1>
-    <canvas width="1800" height="800"></canvas>
+    <div id="scoreTable">
+        
+    </div>
+    <canvas width="1300" height="700"></canvas>
+    <div>
+        <h2>Controls</h2>
+
+        <pre>
+            Snake
+            Turn Left: A
+            Turn Right: D
+
+            Camera
+            Move Up/Down: ↓/↑
+            Turn Left/Right: ←/→
+            
+        </pre>
+    </div>
 </body>
 
 </html>
