--- a/FudgeBreakout/main.html
+++ b/FudgeBreakout/main.html
@@ -8,6 +8,7 @@
     <title>Fudge Breakout</title>
     <script src="../Fudge/FudgeCore.js"></script>
     <script src="main.js"></script>
+    <script src="Block.js"></script>
 </head>
 
 <body>
